--- a/app/src/main/res/layout/activity_easy_ai_category.xml
+++ b/app/src/main/res/layout/activity_easy_ai_category.xml
@@ -165,7 +165,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/button_toEntertainmentNews"
+            android:id="@+id/button_toeasychef"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_margin="20dp"
