--- a/app/src/main/res/layout/activity_chatbot.xml
+++ b/app/src/main/res/layout/activity_chatbot.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recycler_view"
-        android:layout_above="@id/bottom_layout"
+        android:layout_above="@id/include2"
         />
     <TextView
         android:layout_width="match_parent"
@@ -24,15 +24,13 @@
         />
 
 
-
     <include
         android:id="@+id/include2"
         layout="@layout/button_panel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_alignParentBottom="true"
+        />
 
 
     <RelativeLayout
@@ -40,16 +38,18 @@
         android:layout_height="80dp"
         android:layout_alignParentBottom="true"
         android:padding="8dp"
+        android:visibility="gone"
         android:id="@+id/bottom_layout">
 
+
         <EditText
+            android:id="@+id/message_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/message_edit_text"
             android:layout_centerInParent="true"
+            android:layout_toLeftOf="@id/send_btn"
             android:hint="여기 입력..."
             android:padding="16dp"
-            android:layout_toLeftOf="@id/send_btn"
             />
 
         <ImageButton
