--- a/app/src/main/res/layout/progress_bar.xml
+++ b/app/src/main/res/layout/progress_bar.xml
@@ -20,7 +20,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
-            android:text="Loading ..." />
+            android:text="로딩중 ..."
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            />
+
 
 
     </FrameLayout>
